Bug 698923 - Don't require 16 bytes alignment for VMFrame on sparc